apps/system/platform/buzz/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: buzz
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
